fix: overflow-x hidden on body

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -37,6 +37,7 @@ body {
     display: flex;
     min-height: 100vh;
     font-size: 14px;
+    overflow-x: hidden;
 }
 
 /* -------------------Sidebar--------------------- */
